add_executable(floatsanityg
	# fl_BE.c
	# fl_BE_java_lang_Math_abs_double.c
	# fl_BE_java_lang_Math_abs_float.c
	# fl_BE_java_lang_Math_acos.c
	# fl_BE_java_lang_Math_asin.c
	# fl_BE_java_lang_Math_atan.c
	# fl_BE_java_lang_Math_atan2.c
	# fl_BE_java_lang_Math_ceil_double.c
	# fl_BE_java_lang_Math_cos.c
	# fl_BE_java_lang_Math_exp.c
	# fl_BE_java_lang_Math_floor_double.c
	# fl_BE_java_lang_Math_IEEEremainder_double.c
	# fl_BE_java_lang_Math_log.c
	# fl_BE_java_lang_Math_max_double_double.c
	# fl_BE_java_lang_Math_max_float_float.c
	# fl_BE_java_lang_Math_min_double_double.c
	# fl_BE_java_lang_Math_min_float_float.c
	# fl_BE_java_lang_Math_pow.c
	# fl_BE_java_lang_Math_rint_double.c
	# fl_BE_java_lang_Math_round_double.c
	# fl_BE_java_lang_Math_round_float.c
	# fl_BE_java_lang_Math_sin.c
	# fl_BE_java_lang_Math_sqrt_double.c
	# fl_BE_java_lang_Math_tan.c
	# fl_BE_java_lang_Math_toDegrees_double.c
	# fl_BE_java_lang_Math_toRadians_double.c
	# fl_BE_java_lang_StrictMath_acos.c
	# fl_BE_java_lang_StrictMath_asin.c
	# fl_BE_java_lang_StrictMath_atan.c
	# fl_BE_java_lang_StrictMath_atan2.c
	# fl_BE_java_lang_StrictMath_cos.c
	# fl_BE_java_lang_StrictMath_exp.c
	# fl_BE_java_lang_StrictMath_log.c
	# fl_BE_java_lang_StrictMath_pow.c
	# fl_BE_java_lang_StrictMath_sin.c
	# fl_BE_java_lang_StrictMath_tan.c
	# fl_BE_JBd2f.c
	# fl_BE_JBd2i.c
	# fl_BE_JBd2l.c
	# fl_BE_JBdadd.c
	# fl_BE_JBdcmpg.c
	# fl_BE_JBdcmpl.c
	# fl_BE_JBddiv.c
	# fl_BE_JBdmul.c
	# fl_BE_JBdneg.c
	# fl_BE_JBdrem.c
	# fl_BE_JBdsub.c
	# fl_BE_JBf2d.c
	# fl_BE_JBf2i.c
	# fl_BE_JBf2l.c
	# fl_BE_JBfadd.c
	# fl_BE_JBfcmpg.c
	# fl_BE_JBfcmpl.c
	# fl_BE_JBfdiv.c
	# fl_BE_JBfmul.c
	# fl_BE_JBfneg.c
	# fl_BE_JBfrem.c
	# fl_BE_JBfsub.c
	# fl_BE_JBi2d.c
	# fl_BE_JBi2f.c
	# fl_BE_JBl2d.c
	# fl_BE_JBl2f.c
	fl_LE.c
	fl_LE_java_lang_Math_abs_double.c
	fl_LE_java_lang_Math_abs_float.c
	fl_LE_java_lang_Math_acos.c
	fl_LE_java_lang_Math_asin.c
	fl_LE_java_lang_Math_atan.c
	fl_LE_java_lang_Math_atan2.c
	fl_LE_java_lang_Math_ceil_double.c
	fl_LE_java_lang_Math_cos.c
	fl_LE_java_lang_Math_exp.c
	fl_LE_java_lang_Math_floor_double.c
	fl_LE_java_lang_Math_IEEEremainder_double.c
	fl_LE_java_lang_Math_log.c
	fl_LE_java_lang_Math_max_double_double.c
	fl_LE_java_lang_Math_max_float_float.c
	fl_LE_java_lang_Math_min_double_double.c
	fl_LE_java_lang_Math_min_float_float.c
	fl_LE_java_lang_Math_pow.c
	fl_LE_java_lang_Math_rint_double.c
	fl_LE_java_lang_Math_round_double.c
	fl_LE_java_lang_Math_round_float.c
	fl_LE_java_lang_Math_sin.c
	fl_LE_java_lang_Math_sqrt_double.c
	fl_LE_java_lang_Math_tan.c
	fl_LE_java_lang_Math_toDegrees_double.c
	fl_LE_java_lang_Math_toRadians_double.c
	fl_LE_java_lang_StrictMath_acos.c
	fl_LE_java_lang_StrictMath_asin.c
	fl_LE_java_lang_StrictMath_atan.c
	fl_LE_java_lang_StrictMath_atan2.c
	fl_LE_java_lang_StrictMath_cos.c
	fl_LE_java_lang_StrictMath_exp.c
	fl_LE_java_lang_StrictMath_log.c
	fl_LE_java_lang_StrictMath_pow.c
	fl_LE_java_lang_StrictMath_sin.c
	fl_LE_java_lang_StrictMath_tan.c
	fl_LE_JBd2f.c
	fl_LE_JBd2i.c
	fl_LE_JBd2l.c
	fl_LE_JBdadd.c
	fl_LE_JBdcmpg.c
	fl_LE_JBdcmpl.c
	fl_LE_JBddiv.c
	fl_LE_JBdmul.c
	fl_LE_JBdneg.c
	fl_LE_JBdrem.c
	fl_LE_JBdsub.c
	fl_LE_JBf2d.c
	fl_LE_JBf2i.c
	fl_LE_JBf2l.c
	fl_LE_JBfadd.c
	fl_LE_JBfcmpg.c
	fl_LE_JBfcmpl.c
	fl_LE_JBfdiv.c
	fl_LE_JBfmul.c
	fl_LE_JBfneg.c
	fl_LE_JBfrem.c
	fl_LE_JBfsub.c
	fl_LE_JBi2d.c
	fl_LE_JBi2f.c
	fl_LE_JBl2d.c
	fl_LE_JBl2f.c
	floatsanitygLibrary.c
)
target_link_libraries(floatsanityg
	PRIVATE
	j9vm_interface
	j9fdm
	#j9fdmlib
	j9util
	j9utilcore
	j9avl
	j9hashtable
	j9thr
		
)
install(
	TARGETS floatsanityg
	RUNTIME DESTINATION ${j9vm_SOURCE_DIR}
)
